@@ -1,7 +1,7 @@
 /***************************************************************************
  *           GFitsTableBitCol.cpp  - FITS table Bit column class           *
  * ----------------------------------------------------------------------- *
- *  copyright (C) 2008-2013 by Juergen Knoedlseder                         *
+ *  copyright (C) 2008-2016 by Juergen Knoedlseder                         *
  * ----------------------------------------------------------------------- *
  *                                                                         *
  *  This program is free software: you can redistribute it and/or modify   *
@@ -320,8 +320,8 @@ int GFitsTableBitCol::integer(const int& row, const int& inx) const
  * @exception GException::fits_invalid_row
  *            Specified row is invalid.
  *
- * This method inserts rows into a FITS table. This implies that the column
- * will be loaded into memory.
+ * Inserts rows into a FITS table. This implies that the column will be
+ * loaded into memory.
  ***************************************************************************/
 void GFitsTableBitCol::insert(const int& row, const int& nrows)
 {
@@ -337,6 +337,9 @@ void GFitsTableBitCol::insert(const int& row, const int& nrows)
         // number of rows to be inserted
         if (m_length == 0) {
             m_length = nrows;
+            m_size   = m_number * m_length;
+            alloc_data();
+            init_data();
         }
         
         // ... otherwise fetch data, allocate new data and copy over
