@@ -1,7 +1,7 @@
 /***************************************************************************
  *        GFitsTableDoubleCol.cpp - FITS table double column class         *
  * ----------------------------------------------------------------------- *
- *  copyright (C) 2010-2013 by Juergen Knoedlseder                         *
+ *  copyright (C) 2010-2016 by Juergen Knoedlseder                         *
  * ----------------------------------------------------------------------- *
  *                                                                         *
  *  This program is free software: you can redistribute it and/or modify   *
@@ -292,8 +292,8 @@ int GFitsTableDoubleCol::integer(const int& row, const int& inx) const
  * @exception GException::fits_invalid_row
  *            Specified row is invalid.
  *
- * This method inserts rows into a FITS table. This implies that the column
- * will be loaded into memory.
+ * Inserts rows into a FITS table. This implies that the column will be
+ * loaded into memory.
  ***************************************************************************/
 void GFitsTableDoubleCol::insert(const int& row, const int& nrows)
 {
@@ -309,6 +309,9 @@ void GFitsTableDoubleCol::insert(const int& row, const int& nrows)
         // number of rows to be inserted
         if (m_length == 0) {
             m_length = nrows;
+            m_size   = m_number * m_length;
+            alloc_data();
+            init_data();
         }
         
         // ... otherwise fetch data, allocate new data and copy over
