@@ -3,6 +3,7 @@
         * Version 1.1.0 released
         =========================
 
+        Correct GFitsTableCol::insert method for empty columns
         Correct GCTAEdisp2D::compute_ebounds methods (#1662)
         Use GFilename in GFits to store filename (#1649)
         Load CTA GTI extension from the HDU name provided by the DSS keyword (#1598)
